<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.b07application.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_home_to_addEvent"
            app:destination="@id/navigation_addEvent" />
        <action
            android:id="@+id/action_navigation_home_to_viewAnnouncementsFragment"
            app:destination="@id/viewAnnouncementsFragment" />
        <action
            android:id="@+id/action_navigation_home_to_postAnnouncementFragment"
            app:destination="@id/postAnnouncementFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.b07application.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard">

    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.b07application.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_addEvent"
        android:name="com.example.b07application.addEventFragment"
        android:label="Add Events"
        tools:layout="@layout/fragment_add_event">
        <action
            android:id="@+id/action_addEvent_to_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_events"
        android:name="com.example.b07application.EventListFragment"
        android:label="Events"
        tools:layout="@layout/fragment_event_list">
        <action
            android:id="@+id/action_events_to_eventDetail"
            app:destination="@id/navigation_eventDetail" />
        <action
            android:id="@+id/action_events_to_addEvent"
            app:destination="@id/navigation_addEvent" />
    </fragment>

    <fragment
        android:id="@+id/navigation_eventDetail"
        android:name="com.example.b07application.EventDetailFragment"
        android:label="Event Details"
        tools:layout="@layout/fragment_event_detail">

        <argument
            android:name="eventID"
            app:argType="string" />

        <action
            android:id="@+id/action_eventDetail_to_eventReview"
            app:destination="@id/navigation_eventReview" />
    </fragment>

    <fragment
        android:id="@+id/navigation_eventReview"
        android:name="com.example.b07application.EventReviewFragment"
        android:label="Review Event"
        tools:layout="@layout/fragment_event_review">

        <action
            android:id="@+id/action_eventReview_to_eventDetail"
            app:destination="@id/navigation_eventDetail" />

        <argument
            android:name="eventID"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/viewAnnouncementsFragment"
        android:name="com.example.b07application.ViewAnnouncementsFragment"
        android:label="Announcements"
        tools:layout="@layout/fragment_view_announcements" />
    <fragment
        android:id="@+id/postAnnouncementFragment"
        android:name="com.example.b07application.PostAnnouncementFragment"
        android:label="fragment_post_announcement"
        tools:layout="@layout/fragment_post_announcement" >
        <action
            android:id="@+id/action_postAnnouncementFragment_to_viewAnnouncementsFragment"
            app:destination="@id/viewAnnouncementsFragment" />
        <action
            android:id="@+id/action_postAnnouncementFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

</navigation>